eip.tf
resource "aws_eip" "nat" {
  count = var.nats_enabled && length(var.aws_azs) > 0 ? length(var.aws_azs) : 0
  tags  = var.global_tags
  vpc   = true
}
